@@ -15,6 +15,10 @@ import org.springframework.mail.javamail.JavaMailSenderImpl;
 import org.springframework.mail.javamail.MimeMessageHelper;
 import org.springframework.mail.javamail.MimeMessagePreparator;
 
+/**
+ *
+ *
+ */
 public class EmailSender {
     private final JavaMailSenderImpl senderImpl;
 
