@@ -22,6 +22,7 @@
 * Add read and edit permission to event detectors default to previous behavior if no permissions are set
 * Add events view permission that has a default of the user role to be consistent with previous versions of Mango this permission can restrict a user to not be able to see any events
 * Leverage module versions database table for more robust upgrade/installation support
+* Adding system setting emailDisabled to allow globally disabling email temporarily
 
 
 *Version 3.7.4*
